@@ -67,7 +67,7 @@ Add a task for reading and writing changes from JOSM style change files.
 **********
 A new cron or daemon run osmosis-extract application for producing regular changesets (ie. daily snapshots or perhaps even less).
 
-**********
+********** DONE
 Add progress reporting features to osmosis tasks so you can tell where it's up to.
 
 ********** DONE
@@ -83,7 +83,7 @@ This implies adding user support to osmosis and should include reading/writing u
 Unit Tests
 As the codebase grows, the lack of unit tests is becoming a bigger issue and making it difficult to make changes.
 
-**********
+********** DONE
 Feature request from Frederik Ramm
 Add a --verify-integrity task to report on ways/segments that refer to non-existent segments/nodes.  This would allow inconsistent planets
 to be handled more effectively.
@@ -96,11 +96,5 @@ job much more flexible, efficient and with less code.
 
 BH: I will use a HashMap to implement this.
 
-**********
-Modify --write-mysql to delete and re-create indexes on InnoDB tables.
-This should result in large import speedups because most time is spent on current table population.
-Not sure how to do this, may be able to examine tables and dynamically re-create the indexes.
-Or maybe just hard code the index creation based on the schema version.
-
-**********
+********** DONE
 Update the bounding box and polygon tasks to handle negative identifiers.
